--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -25,18 +25,15 @@ body {
 	background: $background-color;
 	font-family: $base-font-family; 
 	font-weight: 300;
-	font-size: 1.6rem;
+	font-size: 1.8rem;
 	color: $text-color;
 }
 
 p, ul {
-	font-size: 1.6rem;
+	font-size: 1.8rem;
 	line-height: 1.5em;
 	margin: 0 0 1.5em;
 
-	&.serious {
-		font-size: 1.9rem;
-	}
 }
 
 li {
@@ -51,7 +48,7 @@ a {
 
 h1, h2 {
 	font-family: $secondary-font-family;
-	font-size: 2.4rem;
+	font-size: 2.8rem;
 	font-weight: 300;
 	margin-bottom: 1em;
 	line-height: 1.3em;
@@ -102,12 +99,15 @@ p + h2 {
 			display: -webkit-flex;
 			-webkit-justify-content: space-between;
 			-webkit-align-items: center;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
 		}	
 	}
 
 	&__title {
-		font-size: 3.2rem;
-		margin: 2.4rem 0;
+		font-size: 3.6rem;
+		margin: 3rem 0 1.8rem;
 		color: #fff;
 
 		@include mq(large) {
@@ -120,19 +120,24 @@ p + h2 {
 
 .site-nav {
 	display: -webkit-flex;
+	display: flex;
+	margin: 0 -7%;
 
 	@include mq(large) {
 		float: right;
 		width: 70%;
 		font-size: 2rem;
+		margin: 0;
 	}
 
 	&__item {
+		font-size: 1.8rem;
 		text-decoration: none;
 		color: $background-color;
 		-webkit-flex: 1;
+		flex: 1;
 		display: block;
-		padding: 1.2rem;
+		padding: 1.2rem 0;
 
 		&:hover {
 			color: #fff;
