--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,9 @@ body {
   font-size: 1.8rem;
   color: #4E4E4C; }
 
+a {
+  color: #D67752; }
+
 p, ul {
   font-size: 1.8rem;
   line-height: 1.5em;
@@ -79,9 +82,6 @@ li {
   list-style-type: disc;
   margin-bottom: 0.5em;
   margin-left: 1.5em; }
-
-a {
-  color: blue; }
 
 h1, h2 {
   font-family: Helvetica, Arial, sans-serif;
@@ -180,6 +180,8 @@ p + h2 {
   .section--variant {
     background: #B9D1C9;
     color: #37544a; }
+    .section--variant a {
+      color: #0f1614; }
   .section--background:before {
     content: "";
     display: block;
