--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -19,7 +19,7 @@
 }
 
 .button {
-	color: #fff;
+	color: #fff !important;
 	background: $brand-color;
 	border: none;
 	font-family: $secondary-font-family;
