--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -38,6 +38,10 @@ p, ul {
 	line-height: 1.5em;
 	margin: 0 0 1.5em;
 
+	&.large {
+		font-size: 3rem;
+		margin: .9em;
+	}
 }
 
 li {
@@ -60,7 +64,8 @@ h1, h2 {
 }
 
 h2 {
-	font-size: 1.8rem;
+	font-size: 2rem;
+	font-weight: 400;
 }
 
 p + h2 {
@@ -81,6 +86,10 @@ p + h2 {
 	padding: 0 7%;
 	position: relative;
 
+	&--wide {
+		padding: 0 3.5%
+	}
+
 	& > :last-child {
 		margin-bottom: 0;
 	}
@@ -93,12 +102,9 @@ p + h2 {
 	overflow: hidden;
 
 	@include mq(large) {
-		padding: 3.6rem 0;
+		padding: 2rem 0 2.4rem;
 
 		.container {
-			display: -webkit-flex;
-			-webkit-justify-content: space-between;
-			-webkit-align-items: center;
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
@@ -106,42 +112,69 @@ p + h2 {
 	}
 
 	&__title {
-		font-size: 3.6rem;
-		margin: 3rem 0 1.8rem;
+		//font-size: 3.6rem;
+		margin: 2.4rem 0 1.8rem;
 		color: #fff;
 
 		@include mq(large) {
-			font-size: 3rem;
+		//	font-size: 3rem;
 			float: left;
 			margin: 0;
+		}
+	}
+
+	&__logo {
+		height: 8.2rem;
+
+		@include mq(large) {
+			height: 7rem;
+		}
+	}
+
+	&__phone {
+		margin: 0 0 1.8rem;
+		color: #fff;
+
+		a {
+			color: inherit;
+			text-decoration: none;
+			font-size: 2.4rem;
+			border-bottom: 1px solid lighten($brand-color, 20%);
 		}
 	}
 }
 
 .site-nav {
-	display: -webkit-flex;
 	display: flex;
 	margin: 0 -7%;
 
 	@include mq(large) {
 		float: right;
-		width: 70%;
+		flex: 1;
 		font-size: 2rem;
-		margin: 0;
+		margin: 0 0 0 3%;
 	}
 
 	&__item {
-		font-size: 1.8rem;
+		font-size: 1.6rem;
 		text-decoration: none;
 		color: $background-color;
-		-webkit-flex: 1;
 		flex: 1;
 		display: block;
 		padding: 1.2rem 0;
 
 		&:hover {
 			color: #fff;
-		}	
+		}
+
+		&--phone {
+			color: #fff;
+			margin-left: 1.2rem;
+		}
+
+		@include mq(large) {
+			padding-bottom: 0.4rem;
+		}
 	}
 
 }
@@ -149,6 +182,7 @@ p + h2 {
 .section {
 	padding: 3rem 0;
 	position: relative;
+	overflow: hidden;
 
 	@include mq(large) {
 		padding: 4.8rem 0;
@@ -168,7 +202,6 @@ p + h2 {
 	}
 
 	&--hero {
-		text-align: center;
 		padding: 5rem 0;
 
 		@include mq(large) {
@@ -185,6 +218,10 @@ p + h2 {
 		}
 	}
 
+	&--centered {
+		text-align: center;
+	}
+
 	&--background {
 		&:before {
 			content: "";
@@ -193,7 +230,7 @@ p + h2 {
 			background-size: cover;
 			background-repeat: none;
 			background-position: center 10%;
-			-webkit-filter: grayscale(100%);
+			filter: grayscale(100%);
 			opacity: 0.1;
 			position: absolute;
 			top: 0;
@@ -201,6 +238,39 @@ p + h2 {
 			left: 0;
 			right: 0;
 		};
+	}
+
+	&__piece {
+		$border-style: 1px solid darken($secondary-color, 10%);
+		$spacing-unit: 2.4rem;
+
+		border-bottom: $border-style;
+
+		& + & {
+			padding: $spacing-unit 0 0;
+		}
+
+		&:last-child {
+			border: 0;
+		}
+
+		.button {
+			margin-top: 0.7em;
+		}
+
+		@include mq(large) {
+			width: 50%;
+			float: left;
+			border-bottom: 0;
+			border-right: $border-style;
+			padding-right: $spacing-unit;
+
+			& + & {
+				padding-top: 0;
+				padding-left: $spacing-unit;
+			}
+		}
+
 	}
 
 }
