--- a/css/style.css
+++ b/css/style.css
@@ -140,11 +140,13 @@ p + h2 {
   padding: 0 7%;
   position: relative;
 }
-.container--wide {
-  padding: 0 3.5%;
-}
 .container > :last-child {
   margin-bottom: 0;
+}
+@media (min-width: 690px) {
+  .container--wide {
+    padding: 0 3.5%;
+  }
 }
 
 .site-header {
