--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -86,12 +86,14 @@ p + h2 {
 	padding: 0 7%;
 	position: relative;
 
-	&--wide {
-		padding: 0 3.5%
-	}
-
 	& > :last-child {
 		margin-bottom: 0;
+	}
+
+	@include mq(large) {
+		&--wide {
+			padding: 0 3.5%
+		}
 	}
 }
 
