--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,11 @@ p + h2 {
   clear: both;
 }
 
+.hidden {
+  position: absolute;
+  left: -999999em;
+}
+
 .container {
   margin: 0 auto;
   max-width: 800px;
@@ -329,6 +334,57 @@ p + h2 {
   }
 }
 
+.action-bar {
+  background: #23352f;
+  padding: 2.4rem 0;
+}
+
+.choices {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media (min-width: 690px) {
+  .choices {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+.choices__item {
+  margin: 0;
+  list-style: none;
+  text-align: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.choices__item a {
+  display: block;
+}
+.choices__item + .choices__item {
+  margin-top: 1.2rem;
+}
+@media (min-width: 690px) {
+  .choices__item + .choices__item {
+    margin-top: 0;
+    margin-left: 2.4rem;
+  }
+}
+
 .map {
   position: relative;
   padding-bottom: 75%;
@@ -347,6 +403,16 @@ p + h2 {
   background: #D67752;
   color: #fff;
   padding: 2.4rem 0;
+  text-align: center;
+}
+
+.standout {
+  background: rgba(255, 255, 255, 0.3);
+  padding: 1.2rem 1.8rem;
+  border-radius: 4px;
+}
+
+.centered {
   text-align: center;
 }
 
@@ -394,6 +460,9 @@ p + h2 {
 }
 .button--variant:hover {
   background: #4b7366;
+}
+.button--simple {
+  text-transform: none;
 }
 
 /*# sourceMappingURL=style.css.map */
