--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ h1, h2 {
 
 h2 {
   font-size: 2rem;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 p + h2 {
@@ -260,6 +260,11 @@ p + h2 {
   .section {
     padding: 4.8rem 0;
   }
+}
+.section img {
+  max-width: 100%;
+  border-radius: 3px;
+  display: block;
 }
 .section__title {
   text-align: center;
@@ -414,6 +419,90 @@ p + h2 {
 
 .centered {
   text-align: center;
+}
+
+.gallery {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+.gallery__item {
+  width: 48%;
+  list-style: none;
+  padding: 0;
+  margin: 0 0 4%;
+}
+.gallery__item:nth-last-child(2) {
+  margin-bottom: 0;
+}
+.gallery__item:last-child {
+  margin-bottom: 0;
+}
+@media (min-width: 690px) {
+  .gallery__item {
+    width: 23%;
+    margin: 0;
+  }
+}
+.gallery__item img {
+  display: block;
+  width: 100%;
+}
+.gallery__item a {
+  display: block;
+}
+.gallery__item--more {
+  text-align: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.gallery__item--more a {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.gallery__item--more span {
+  display: block;
+  line-height: 1.4em;
+}
+
+.flush-top {
+  margin-top: 0;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+}
+.flush-bottom {
+  margin-bottom: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .mobile-hide {
