--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -65,7 +65,7 @@ h1, h2 {
 
 h2 {
 	font-size: 2rem;
-	font-weight: 400;
+	font-weight: 600;
 }
 
 p + h2 {
@@ -84,6 +84,7 @@ p + h2 {
 	position: absolute;
 	left: -999999em;
 }
+
 
 .container {
 	margin: 0 auto;
@@ -194,6 +195,12 @@ p + h2 {
 
 	@include mq(large) {
 		padding: 4.8rem 0;
+	}
+
+	img {
+		max-width: 100%;
+		border-radius: 3px;
+		display: block;
 	}
 
 	&__title {
@@ -354,4 +361,72 @@ p + h2 {
 
 .centered {
 	text-align: center;
+}
+
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: stretch;
+
+	&__item {
+		width: 48%;
+		list-style: none;
+		padding: 0;
+		margin: 0 0 4%;
+
+		&:nth-last-child(2) {
+			margin-bottom: 0;
+		}
+		&:last-child {
+			margin-bottom: 0;	
+		}
+
+		@include mq(large) {
+			width: 23%;
+			margin: 0;
+		}
+
+		img {
+			display: block;
+			width: 100%;
+		}
+
+		a {
+			display: block;
+		}
+
+		&--more {
+			text-align: center;
+			display: flex;
+
+			a {
+				display: flex;
+				flex: 1;
+				flex-direction: column;
+				justify-content: center;
+			}
+
+			span {
+				display: block;
+				line-height: 1.4em;
+			}
+		}
+	}
+
+}
+
+.flush {
+
+	&-top {
+		margin-top: 0;
+		border-top-right-radius: 0;
+		border-top-left-radius: 0;
+	}
+
+	&-bottom {
+		margin-bottom: 0;
+		border-bottom-right-radius: 0;
+		border-bottom-left-radius: 0;
+	}
 }
