--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ html {
 
 body {
   background: #F6EEDA;
-  font-family: Georgia, serif;
+  font-family: "Lora", Georgia, serif;
   font-weight: 300;
   font-size: 1.8rem;
   color: #4E4E4C;
@@ -107,7 +107,7 @@ li {
 }
 
 h1, h2 {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 2.8rem;
   font-weight: 300;
   margin-bottom: 1em;
@@ -263,8 +263,10 @@ p + h2 {
 }
 .section img {
   max-width: 100%;
-  border-radius: 3px;
   display: block;
+}
+.section__image {
+  border-radius: 3px;
 }
 .section__title {
   text-align: center;
@@ -312,7 +314,7 @@ p + h2 {
   right: 0;
 }
 .section__piece {
-  border-top: 1px solid #9abdb1;
+  border-top: 1px solid #ddd5c0;
   clear: both;
 }
 .section__piece + .section__piece {
@@ -335,7 +337,7 @@ p + h2 {
   .section__piece--half + .section__piece--half {
     padding-top: 0;
     padding-left: 2.4rem;
-    border-left: 1px solid #9abdb1;
+    border-left: 1px solid #ddd5c0;
   }
 }
 
@@ -505,6 +507,21 @@ p + h2 {
   border-bottom-left-radius: 0;
 }
 
+.bio__image {
+  width: 160px;
+  height: auto;
+  border-radius: 80px;
+  margin: 0 auto 1em;
+}
+@media (min-width: 690px) {
+  .bio__image {
+    width: 200px;
+    border-radius: 100px;
+    float: right;
+    margin: .5em 0 .5em .5em;
+  }
+}
+
 .mobile-hide {
   display: none;
 }
@@ -531,7 +548,7 @@ p + h2 {
   color: #fff !important;
   background: #D67752;
   border: none;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 1.5rem;
   padding: 1rem 2.4rem .9rem;
